Add custom config to nginx.

--- a/web/nginx/Dockerfile
+++ b/web/nginx/Dockerfile
@@ -1,1 +1,6 @@
 FROM nginx:alpine
+
+COPY vhosts.conf /etc/nginx/conf.d/vhosts.conf
+COPY docker.conf /etc/nginx/conf.d/docker.conf
+
+EXPOSE 80 443
