Remove log symlinks.

--- a/web/nginx/Dockerfile
+++ b/web/nginx/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:alpine
 
+RUN rm /var/log/nginx/access.log && rm /var/log/nginx/error.log
 COPY vhosts.conf /etc/nginx/conf.d/vhosts.conf
 COPY docker.conf /etc/nginx/conf.d/docker.conf
 
