Move config files to separate directories.

--- a/db/mysql/Dockerfile
+++ b/db/mysql/Dockerfile
@@ -1,4 +1,3 @@
 FROM mysql
 
-COPY nativepw.cnf /etc/mysql/conf.d/nativepw.cnf
-COPY host.cnf /etc/mysql/conf.d/host.cnf
+COPY conf.d/*.cnf /etc/mysql/conf.d
