--- a/web/nginx/Dockerfile
+++ b/web/nginx/Dockerfile
@@ -1,7 +1,5 @@
 FROM nginx:alpine
 
-RUN rm /var/log/nginx/access.log && rm /var/log/nginx/error.log
-COPY vhosts.conf /etc/nginx/conf.d/vhosts.conf
-COPY docker.conf /etc/nginx/conf.d/docker.conf
+COPY conf.d/*.conf /etc/nginx/conf.d
 
 EXPOSE 80 443
