--- a/web/nginx/Dockerfile
+++ b/web/nginx/Dockerfile
@@ -1,5 +1,11 @@
 FROM nginx:alpine
 
-COPY conf.d/*.conf /etc/nginx/conf.d/
+RUN rm /etc/nginx/conf.d/default.conf && \
+    mv /etc/nginx/conf.d /etc/nginx/docker.d && \
+    mkdir /etc/nginx/conf.d && \
+    mkdir /etc/nginx/vhosts.d && \
+    sed -i -e s@/etc/nginx/conf\.d@/etc/nginx/docker\.d@ /etc/nginx/nginx.conf
+
+COPY docker.d/*.conf /etc/nginx/docker.d/
 
 EXPOSE 80 443
