Make postfixadmin run under nginx.

--- a/mail/postfixadmin/Dockerfile
+++ b/mail/postfixadmin/Dockerfile
@@ -1,1 +1,41 @@
-FROM postfixadmin:fpm-alpine
+FROM mossop/nginx-php
+
+RUN apk add --no-cache --virtual .build-deps \
+      sqlite-dev \
+      postgresql-dev \
+      imap-dev  && \
+    docker-php-ext-install \
+      mysqli \
+      pdo_mysql \
+      pdo_pgsql \
+      pdo_sqlite \
+      pgsql \
+      imap && \
+    runDeps="$( \
+      scanelf --needed --nobanner --format '%n#p' --recursive /usr/local/lib/php/extensions \
+      | tr ',' '\n' \
+      | sort -u \
+      | awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
+    )" && \
+    apk add --virtual .postfixadmin-phpexts-rundeps $runDeps && \
+    apk del .build-deps
+
+ARG POSTFIXADMIN_VERSION=3.2
+ARG POSTFIXADMIN_SHA512=9e022e3311bce96342e87925159a048f294ed0e2d4558bd43120b5c6eda35a7a2d128987372d310dfe86680c98a4d8cf3d602afcb20d948c9bba58bed1766560
+
+ENV POSTFIXADMIN_VERSION $POSTFIXADMIN_VERSION
+ENV POSTFIXADMIN_SHA512 $POSTFIXADMIN_SHA512
+
+RUN curl -fsSL -o postfixadmin.tar.gz "https://github.com/postfixadmin/postfixadmin/archive/postfixadmin-${POSTFIXADMIN_VERSION}.tar.gz" && \
+    echo "$POSTFIXADMIN_SHA512 *postfixadmin.tar.gz" | sha512sum -c - && \
+    # upstream tarball include ./postfixadmin-postfixadmin-${POSTFIXADMIN_VERSION}/
+    mkdir /usr/src/postfixadmin && \
+    tar -xf postfixadmin.tar.gz -C /usr/src/postfixadmin --strip-components=1 && \
+    rm postfixadmin.tar.gz && \
+    # Does not exist in tarball but is required
+    mkdir -p /usr/src/postfixadmin/templates_c && \
+    chown -R www-data:www-data /usr/src/postfixadmin
+
+COPY vhosts.d/* /etc/nginx/vhosts.d/
+
+EXPOSE 80
