Fix mysql config directories.

--- a/db/mysql/Dockerfile
+++ b/db/mysql/Dockerfile
@@ -1,3 +1,6 @@
 FROM mysql
 
-COPY conf.d/*.cnf /etc/mysql/conf.d/
+RUN mkdir /etc/mysql/docker.d && \
+    mv /etc/mysql/conf.d/* /etc/mysql/docker.d && \
+    echo "!includedir /etc/mysql/docker.d/" >> /etc/mysql/my.cnf
+COPY docker.d/*.cnf /etc/mysql/docker.d/
