Relocate postfixadmin install.

--- a/mail/postfixadmin/Dockerfile
+++ b/mail/postfixadmin/Dockerfile
@@ -29,12 +29,10 @@ ENV POSTFIXADMIN_SHA512 $POSTFIXADMIN_SHA512
 RUN curl -fsSL -o postfixadmin.tar.gz "https://github.com/postfixadmin/postfixadmin/archive/postfixadmin-${POSTFIXADMIN_VERSION}.tar.gz" && \
     echo "$POSTFIXADMIN_SHA512 *postfixadmin.tar.gz" | sha512sum -c - && \
     # upstream tarball include ./postfixadmin-postfixadmin-${POSTFIXADMIN_VERSION}/
-    mkdir /usr/src/postfixadmin && \
-    tar -xf postfixadmin.tar.gz -C /usr/src/postfixadmin --strip-components=1 && \
+    tar -xf postfixadmin.tar.gz -C /var/www/html --strip-components=1 && \
     rm postfixadmin.tar.gz && \
     # Does not exist in tarball but is required
-    mkdir -p /usr/src/postfixadmin/templates_c && \
-    chown -R www-data:www-data /usr/src/postfixadmin
+    mkdir -p /var/wwew/html/templates_c
 
 COPY vhosts.d/* /etc/nginx/vhosts.d/
 
