--- a/mail/postfixadmin/vhosts.d/postfixadmin.conf
+++ b/mail/postfixadmin/vhosts.d/postfixadmin.conf
@@ -2,7 +2,7 @@ server {
   listen               80 default_server;
   listen               [::]:80 default_server;
 
-  root                 /usr/src/postfixadmin/public;
+  root                 /var/www/html/public;
   index                index.php;
   fastcgi_index        index.php;
 
