--- a/db/mysql/Dockerfile
+++ b/db/mysql/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql
 
-RUN mkdir /etc/mysql/docker.d && \
-    mv /etc/mysql/conf.d/* /etc/mysql/docker.d && \
-    echo "!includedir /etc/mysql/docker.d/" >> /etc/mysql/my.cnf
-COPY docker.d/*.cnf /etc/mysql/docker.d/
+RUN mv /etc/mysql/conf.d /etc/mysql/defaults.d && \
+    mkdir /etc/mysql/conf.d && \
+    echo "!includedir /etc/mysql/defaults.d/" >> /etc/mysql/my.cnf
+COPY defaults.d/*.cnf /etc/mysql/defaults.d/
