Use defaults.d instead of docker.d.

--- a/web/nginx/Dockerfile
+++ b/web/nginx/Dockerfile
@@ -1,11 +1,11 @@
 FROM nginx:alpine
 
 RUN rm /etc/nginx/conf.d/default.conf && \
-    mv /etc/nginx/conf.d /etc/nginx/docker.d && \
+    mv /etc/nginx/conf.d /etc/nginx/defaults.d && \
     mkdir /etc/nginx/conf.d && \
     mkdir /etc/nginx/vhosts.d && \
-    sed -i -e s@/etc/nginx/conf\.d@/etc/nginx/docker\.d@ /etc/nginx/nginx.conf
+    sed -i -e s@/etc/nginx/conf\.d@/etc/nginx/defaults\.d@ /etc/nginx/nginx.conf
 
-COPY docker.d/*.conf /etc/nginx/docker.d/
+COPY defaults.d/*.conf /etc/nginx/defaults.d/
 
 EXPOSE 80 443
