Fix postfix permissions.

--- a/mail/postfix/Dockerfile
+++ b/mail/postfix/Dockerfile
@@ -1,2 +1,5 @@
 FROM alpine
-RUN apk add --no-cache postfix
+RUN apk add --no-cache postfix && \
+    chown postfix:postfix /var/lib/postfix
+
+CMD ["/usr/sbin/postfix", "start-fg"]
