Fix config and run dovecot.

--- a/mail/dovecot/Dockerfile
+++ b/mail/dovecot/Dockerfile
@@ -1,2 +1,8 @@
 FROM alpine
-RUN apk add --no-cache dovecot
+RUN apk add --no-cache dovecot && \
+    mv /etc/dovecot/conf.d /etc/dovecot/defaults.d && \
+    mkdir /etc/dovecot/conf.d && \
+    sed -i -e "s@include conf\\.d/@include defaults.d/@" /etc/dovecot/dovecot.conf && \
+    echo "!include_try conf.d/*.conf" >> /etc/dovecot/dovecot.conf
+
+CMD ["dovecot", "-F"]
