Add more utilities to the base image and make dovecot work on it.

--- a/base/alpine/Dockerfile
+++ b/base/alpine/Dockerfile
@@ -7,4 +7,11 @@ RUN set -ex && \
       tzdata && \
     cp /usr/share/zoneinfo/America/Los_Angeles /etc/localtime && \
     echo "America/Los_Angeles" > /etc/timezone && \
-    apk-end .setup
+    apk-end .setup && \
+    deluser postmaster && \
+    deluser cyrus && \
+    deluser mail && \
+    deluser postgres && \
+    mkusr www-data /var/www/html 2001 && \
+    mkusr mail /var/spool/mail 2002 && \
+    mkusr vmail /var/mail/vmail 2003
