Move postfix to the new base

--- a/base/alpine/Dockerfile
+++ b/base/alpine/Dockerfile
@@ -1,5 +1,10 @@
 FROM alpine
 
+ENV CFLAGS="-Os -fomit-frame-pointer"
+ENV CXXFLAGS="-Os -fomit-frame-pointer"
+ENV CPPFLAGS="-Os -fomit-frame-pointer"
+ENV LDFLAGS="-Wl,--as-needed"
+
 COPY bin/* /usr/local/bin/
 
 RUN set -ex && \
