--- a/mail/dovecot/Dockerfile
+++ b/mail/dovecot/Dockerfile
@@ -1,29 +1,12 @@
 FROM mossop/alpine
 
-RUN mkusr dovecot /var/mail/vmail && \
-    mkusr dovenull /dev/null && \
-    addgroup dovecot vmail && \
-    apk-begin .builddeps \
-      make \
-      gcc \
-      libtool \
-      linux-headers \
-      musl-dev \
-      bzip2-dev \
-      openssl-dev \
-      zlib-dev \
-      mariadb-connector-c-dev && \
-    get-source dovecot "https://www.dovecot.org/releases/2.3/dovecot-2.3.5.tar.gz" && \
-    build-package dovecot target \
-      --sysconfdir=/etc \
-      --localstatedir=/var \
-      --with-rundir=/run/dovecot \
-      --with-sql \
-      --with-mysql && \
-    apk-end .builddeps && \
-    cp -R /usr/src/target/usr/share/doc/dovecot/example-config /etc/dovecot && \
-    strip-build target && \
-    install-build target
+RUN mkusr dovecot /var/mail/vmail 2101 && \
+    mkusr dovenull /dev/null 2102 && \
+    apk-add \
+      dovecot \
+      dovecot-lmtpd \
+      dovecot-pop3d \
+      dovecot-mysql
 
 COPY bin/* /usr/local/bin/
 
