--- a/base/alpine-build/Dockerfile
+++ b/base/alpine-build/Dockerfile
@@ -6,4 +6,6 @@ ENV CXXFLAGS="-Os -fomit-frame-pointer"
 ENV CPPFLAGS="-Os -fomit-frame-pointer"
 ENV LDFLAGS="-Wl,--as-needed"
 
+RUN mkdir -p /usr/src
+
 COPY bin/* /usr/local/bin/
