Start making some shared installers.

--- a/base/alpine-build/Dockerfile
+++ b/base/alpine-build/Dockerfile
@@ -6,6 +6,7 @@ ENV CXXFLAGS="-Os -fomit-frame-pointer"
 ENV CPPFLAGS="-Os -fomit-frame-pointer"
 ENV LDFLAGS="-Wl,--as-needed"
 
-RUN mkdir -p /usr/src
+RUN mkdir -p /usr/src/installers
 
 COPY bin/* /usr/local/bin/
+COPY installers/* /usr/src/installers/
